--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain-community>=0.3.5",
     "langgraph>=0.2.44",
     "langsmith>=0.1.139",
+    "python-dotenv>=1.0.1",
     "tavily-python>=0.5.0",
 ]
 
@@ -17,5 +18,5 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.uv]
-requires-python = ">=3.12"
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
